Bug 305083 - When using ctrl+right-arrow on last word in a wrapping line, caret moves to end of line instead of to beginning of next line. patch from Eyal Rozenberg <eyalroz@technion.ac.il>, r=uriber, sr=roc.